# embeddedCollector

./: CMakeLists.txt  README.md  common.h  db.sql  main.c  main.js  pack  pack.c  protocol.h  sqlcli  start_ske.sh  test_js.c  test_uart.sh  www_root.c  xx-main.c  zyp.c
CWebEngine/: CMakeLists.txt  Router.c  Router.h  User.c  User.h
CWebEngine/Api/: ApiRouter.c  ApiRouter.h  GetDataTest1.c  GetPointsCurrentValue.c
Contribs/gpio/: --setgpio.c  CMakeLists.txt  gpio.c  gpio.h
Contribs/libbson/: CMakeLists.txt  ChangeLog  Makefile.in
Contribs/libbson/examples/: json-to-bson.c
Contribs/mongoose/: CMakeLists.txt  archive.tgz  mongoose.c  mongoose.c.aaa  mongoose.h  mongoose.h.aaa  mongoose.h.bak
Contribs/quickjs/: CMakeLists.txt  Makefile  qjscalc.c  quickjs.c  quickjs.h
Contribs/socketcan/: CMakeLists.txt  lib.c
Contribs/sqlite3/: CMakeLists.txt
Contribs/uart/: CMakeLists.txt  uartlib.c  uartlib.h
RjsEngine/: CMakeLists.txt  mod_bson.c  mod_cmd.c--  mod_cmd.h--  mod_core.c  mod_db.c  mod_gpio.c  mod_kafka.c  mod_mqtt.c  mod_socketcan.c  mod_uart.c  rjs.c  rjs.h
server/back/: =====server1.js  modules.js  server.js  sk.db  test.js  webapi.js
server/front/: dashboard.html  index.html  index1.html  status.html
server/front/css/: blaze.min.css  sk-layout.css  sk.css
server/front/js/: monitor.min.js
